serd (0.18.3) unstable;

  * Support most of the latest Turtle Editor's Draft
  * Fix possible crash in serd_writer_end_anon() when writing invalid lists
  * Generate blank names like _:b1 and _:B2 not _:genid1 _:docid2
  * Correctly handle posix_memalign failure

 -- David Robillard <d@drobilla.net>  Sun, 24 Feb 2013 02:05:30 -0500

serd (0.18.2) stable;

  * Fix crash when serd_node_new_decimal is called with infinity or NaN
  * Fix crash when resolving against non-standard base URIs
  * Fix bug that caused "a" abbreviation in non-predicate position
  * Disable timestamps in HTML documentation for reproducible build
  * Fix clashing symbol "error" in amalgamation build
  * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Sat, 22 Dec 2012 21:32:15 -0500

serd (0.18.0) stable;

  * Support digits at start of local names as per new Turtle grammar
  * Add incremental read interface suitable for reading from infinite streams
  * Add -e option to serdi to use incremental reading
  * Add error callback to reader and writer for custom error reporting
  * Add -q option to serdi to suppress all non-data output, e.g. errors
  * Reset indent when finishing a write
  * Report write size correctly when invalid UTF-8 is encountered and a
    replacement character is written
  * Strip down API documentation to a single clean page
  * Fix various hyper-strict warnings
  * Do not require a C++ compiler to build
  * Add option to build utilities as static binaries
  * Upgrade to waf 1.7.2

 -- David Robillard <d@drobilla.net>  Thu, 23 Aug 2012 00:18:34 -0400

serd (0.14.0) stable;

  * Use path variables in pkgconfig files
  * Install man page to DATADIR (e.g. PREFIX/share/man, not PREFIX/man)
  * Tolerate invalid characters in string literals by replacing with the
    Unicode replacement character
  * Report reason for failure to open file in serdi