@@ -1,6 +1,8 @@
 serd (0.18.3) unstable;
 
-  * Support most of the latest Turtle Editor's Draft
+  * Support most of the latest Turtle Draft
+  * Don't write xsd:decimal literals to Turtle bare if they would not be read
+    back with the same type
   * Fix possible crash in serd_writer_end_anon() when writing invalid lists
   * Generate blank names like _:b1 and _:B2 not _:genid1 _:docid2
   * Correctly handle posix_memalign failure
